--- a/pinyougou-page-service/pom.xml
+++ b/pinyougou-page-service/pom.xml
@@ -15,11 +15,7 @@
 			<artifactId>freemarker</artifactId>
 	</dependency>
   	
-  	<dependency>
-  		<groupId>com.pinyougou</groupId>
-  		<artifactId>pinyougou-dao</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
+  
   	
   	<dependency>
 	   <groupId>org.springframework</groupId>
@@ -60,20 +56,7 @@
 </dependency>
 
 <!-- dubbo 相关 -->
-<dependency>
-	<groupId>com.alibaba</groupId>
-	<artifactId>dubbo</artifactId> 
-</dependency>
 
-<dependency>
-	<groupId>org.apache.zookeeper</groupId>
-	<artifactId>zookeeper</artifactId> 
-</dependency>
-
-<dependency>
-	<groupId>com.github.sgroschupf</groupId>
-	<artifactId>zkclient</artifactId>
-</dependency>
 
 <dependency>
 	<groupId>junit</groupId>
@@ -112,6 +95,17 @@
   		<artifactId>pinyougou-page-interface</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  		<dependency>
+	  		<groupId>com.pinyougou</groupId>
+	  		<artifactId>pinyougou-dao</artifactId>
+	  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+	  	<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-client</artifactId>
+			<version>5.13.4</version>
+	
+	</dependency>
   	
   </dependencies>
   <build>
