--- a/pinyougou-search-service/pom.xml
+++ b/pinyougou-search-service/pom.xml
@@ -8,8 +8,17 @@
   <artifactId>pinyougou-search-service</artifactId>
   
   <packaging>war</packaging>
-  
+  	
+		
  	<dependencies>
+		 
+		
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-client</artifactId>
+				<version>5.13.4</version>
+			 </dependency>
+		
 			  	<dependency>
 			  		<groupId>com.pinyougou</groupId>
 			  		<artifactId>pinyougou-dao</artifactId>
@@ -108,6 +117,8 @@
 				<artifactId>pinyougou-search-interface</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
+			
+			
  	</dependencies>
   <build>
 	<plugins>
